error_6820731.err
Traceback (most recent call last):
  File "/home/users/mas296/projects/ece661-GAN-project/rerecycleGAN/train.py", line 7, in <module>
    from model import RecycleGAN
  File "/home/users/mas296/projects/ece661-GAN-project/rerecycleGAN/model.py", line 280
    list(self.AtoB.parameters()) +
    ^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
